AM demodulation documentation

--- a/extra/demodulation.tex
+++ b/extra/demodulation.tex
@@ -63,5 +63,10 @@ A^{2}=\frac{x[1]^{2}\cos^{2}\phi+x[1]^{2}\sin^{2}\phi+x[0]^{2}-2x[1]x[0]\cos\phi
 A=\frac{\sqrt{x[1]^{2}+x[0]^{2}-2x[1]x[0]\cos\phi}}{\sin\phi}
 \end{align*}
 
+Then:
+
+\begin{align*}
+y[i]=\frac{\sqrt{x[i]^{2}+x[i-1]^{2}-2x[i]x[i-1]\cos\phi}}{\sin\phi}
+\end{align*}
 
 \end{document}
