--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,14 @@
+noaa-apt (1.3.1-1) testing; urgency=medium
+
+  * Added run-noaa-apt.sh script for standalone GNU/Linux users, can be double
+    clicked to launch the program.
+  * Fixed that TLE file is downloaded even if it is not needed (thanks
+    Arcadie Z.).
+  * Improved version checks (thanks Arcadie Z.).
+  * Updated dependencies and small fixes.
+
+ -- Martin Bernardi <martin@mbernardi.com.ar>  Thu, 09 Nov 2021 17:46:12 +0200
+
 noaa-apt (1.3.0-1) testing; urgency=medium
 
   * False color.
