--- a/debian/changelog
+++ b/debian/changelog
@@ -2,11 +2,12 @@ noaa-apt (1.4.0-1) testing; urgency=medium
 
   * New false color method based on palettes.
   * Added support to obtain timestamps from SDR++ filenames.
-  * Updated dependencies.
+  * Added "Auto update" functionality in processing tab.
   * Sadly, minimum glibc version is now 2.28. Therefore, a newer distro is
     needed: Debian Buster or Ubuntu 20.04 or equivalent.
+  * Updated dependencies and more small fixes.
 
- -- Martin Bernardi <martin@mbernardi.com.ar>  Wed, 26 Oct 2022 23:48:04 +0200
+ -- Martin Bernardi <martin@mbernardi.com.ar>  Thu, 17 Nov 2022 23:29:26 +0100
 
 noaa-apt (1.3.1-1) testing; urgency=medium
 
